[package]
name = "gfy-hash"
version = "0.3.0"
authors = ["Mike <michaelpulliam1@gmail.com>"]
edition = "2021"
description = "A crate to create gfycat url style hashes"
repository = "https://github.com/mz2212/gfyhash"
readme = "README.md"
keywords = ["gfycat", "hash", "gfy"]
license = "MIT"

[features]
default = ["list_builtin"]
list_builtin = []

[lib]
name = "gfyhash"
path = "src/lib.rs"

[[bin]]
name = "gfyhash-bin"
path = "src/bin.rs"

[dependencies]
wyhash = "0.5"
